<resources>
    <string name="app_name">Kaife_cataAPP</string>
    <string name="registrate_con">REGISTRATE CON</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="genero">Genero:</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?,</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?,</string>
    <string name="registrate">Regístrate</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="telefono">Telefono</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="correo_electronico_o_tel_fono">Correo Electronico o Teléfono</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="inicia_sesi_n_con_tu_cuenta">Inicia sesión con tu cuenta</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="o_inicia_sesi_n_con">O inicia sesión con</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="enviar_c_digo">Enviar código</string>
    <string name="introduzca_el_c_digo_recibido">Introduzca el código recibido</string>
    <string name="verificar_c_digo">Verificar código</string>
    <string name="cuestionario">Cuestionario</string>
    <string name="salir">Salir</string>
    <string name="siguiente">siguiente</string>
    <string name="pregunta_1">Pregunta 1</string>
    <string name="pregunta_2">Pregunta 2</string>
    <string name="pregunta_3">Pregunta 3</string>
    <string name="pregunta_4">Pregunta 4</string>
    <string name="pregunta_5">Pregunta 5</string>
    <string name="pregunta_6">Pregunta 6</string>
    <string name="pregunta_7">Pregunta 7</string>
    <string name="question1">Al inhalar la fragancia del café molido su percepción es:</string>
    <string name="question2">Al inhalar el aroma del café recién preparado su percepción es:</string>
    <string name="question3">Al sorber el café los vapores retro nasales que detectan son:</string>
    <string name="question4">Despues de dejar que el café envuelva nuestra lengua pasando por todas nuestras papilas gustativas, clasifique el sabor del café. *Sabores</string>
    <string name="question5">Pasado un tiempor despues de tomar el café, clasifique el sabor residual. *Sabores</string>
    <string name="question6">El cuerpo es una sensación en la boca de viscosidad y sedosidad que a menudo se asocia con sabores potentes, calcifíquelo según las siguientes características del contenido de grasa.</string>
    <string name="question7">El peso que tiene el café en el paladar, cuerpo, calcifíquelo según su percepción.</string>
    <string name="leguminoso_pepino_y_o_arveja">Leguminoso: pepino y/o arveja.</string>
    <string name="cebolla_cebolla_y_o_ajo">Cebolla: cebolla y/o ajo.</string>
    <string name="baya_albaricoque_y_o_mora">Baya: albaricoque y/o mora.</string>
    <string name="c_trico_lim_n_y_o_manzana">Cítrico: limón y/o manzana.</string>
    <string name="fragrante_cardamomo_y_o_alcaravea">Fragrante: Cardamomo y/o alcaravea.</string>
    <string name="floral_flor_de_caf_y_o_t_de_rosa">Floral: Flor de café y/o té de rosa.</string>
    <string name="nuez_man_tostado_y_o_nueces">Nuez: maní tostado y/o nueces.</string>
    <string name="malta_arroz_bals_mico_y_o_tostada">Malta: arroz balsámico y/o tostada.</string>
    <string name="dulce_avellana_tostada_y_o_almendra_tostada">Dulce: avellana tostada y/o almendra tostada.</string>
    <string name="jarabe_miel_y_o_jarabe_maple">Jarabe: miel y/o jarabe maple.</string>
    <string name="achocolatado_chocolate_amargo_y_o_chocolate_negro">Achocolatado: chocolate amargo y/o chocolate negro.</string>
    <string name="vainilla_chocolate_suizo_y_o_mantequilla">Vainilla: chocolate suizo y/o mantequilla.</string>
    <string name="ceniza_carbonizado_y_o_quemado">Ceniza: carbonizado y/o quemado.</string>
    <string name="ahumado_tabaco_y_o_alquitr_n">Ahumado: tabaco y/o alquitrán.</string>
    <string name="agudo_tomillo_y_o_clavo">Agudo: tomillo y/o clavo.</string>
    <string name="c_lido_pimienta_y_o_cedro">Cálido: pimienta y/o cedro.</string>
    <string name="medicinal_mentolado_y_o_alcanfor">Medicinal: mentolado y/o alcanfor.</string>
    <string name="reinoso_agraz_y_o_pino">Reinoso: agraz y/o pino.</string>
    <string name="acido_agrio_acre_y_o_duro_vinoso_agridulce_y_o_c_trico">Acido: (Agrio: acre y/o duro, Vinoso: agridulce y/o cítrico).</string>
    <string name="dulce_acido_picante_y_o_punzante_tenso_dulce_y_o_delicado">Dulce: (Acido: picante y/o punzante, Tenso: dulce y/o delicado).</string>
    <string name="salado_simple_seco_y_o_neutro_agudo_spero_y_o_astringente">Salado: (Simple: seco y/o neutro, Agudo: áspero y/o astringente).</string>
    <string name="amargo_spero_alcalino_y_o_c_ustico_acre_fen_lico_y_o_creosota">Amargo: (Áspero: Alcalino y/o Cáustico, Acre: Fenólico y/o creosota).</string>
    <string name="grueso_o_mantecoso">Grueso o mantecoso.</string>
    <string name="liso">Liso.</string>
    <string name="delgado_o_acuoso">Delgado o acuoso.</string>
    <string name="pesado">Pesado.</string>
    <string name="ligero">Ligero.</string>
    <string name="enviar_respuestas">Enviar respuestas</string>
    <string name="ltimos_pasos">Últimos pasos</string>
    <string name="continuar">Continuar</string>
    <string name="respuestas">Respuestas</string>
    <string name="gr_ficos">Gráficos</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="cata_de_caf">Cata de café</string>
    <string name="cultivo_agr_cola_tradicional">Cultivo Agrícola tradicional</string>
    <string name="cultivo_agroforestal">Cultivo Agroforestal</string>
    <string name="es_un_caf_de_car_cter_con_notas_de_dulce_caramelo_o_jarabe_y_matices_de_plantas_silvestre_y_o_comestibles_n_npregunta_1_opciones_1_2_3_y_5_npregunta_2_opciones_2_y_3_npregunta_3_opciones_3_5_y_6_npregunta_4_opciones_2_y_3_npregunta_5_opciones_2_y_3_npregunta_6_opciones_2_npregunta_7_opciones_1">Es un Café de carácter con notas de dulce caramelo o jarabe y matices de plantas silvestre y/o comestibles. \n \nPregunta 1. Opciones 1, 2, 3 y 5. \nPregunta 2. Opciones 2 y 3. \nPregunta 3. Opciones 3, 5, y 6. \nPregunta 4. Opciones 2 y 3. \nPregunta 5. Opciones 2 y 3. \nPregunta 6. Opciones 2. \nPregunta 7. Opciones 1.</string>
    <string name="es_un_caf_intenso_con_notas_de_dulce_caramelo_acidez_sutil_y_residual_de_chocolate_amargo_n_npregunta_1_opciones_3_4_y_6_npregunta_2_opciones_2_3_5_y_6_npregunta_3_opciones_4_5_y_6_npregunta_4_opciones_1_y_2_npregunta_5_opciones_1_y_2_npregunta_6_opciones_2_npregunta_7_opciones_1">Es un Café intenso con notas de dulce caramelo, acidez sutil y residual de chocolate amargo.\n \nPregunta 1. Opciones 3, 4 y 6. \nPregunta 2. Opciones 2 , 3, 5 y 6. \nPregunta 3. Opciones 4, 5, y 6. \nPregunta 4. Opciones 1 y 2. \nPregunta 5. Opciones 1 y 2. \nPregunta 6. Opciones 2. \nPregunta 7. Opciones 1.</string>
    <string name="es_un_caf_balanceado_con_notas_dulces_y_textura_sedosa_n_npregunta_1_opciones_1_2_3_y_5_npregunta_2_opciones_2_y_4_npregunta_3_opciones_3_4_5_y_6_npregunta_4_opciones_2_npregunta_5_opciones_2_npregunta_6_opciones_3_npregunta_7_opciones_1">Es un Café balanceado con notas dulces y textura sedosa.\n \nPregunta 1. Opciones 1, 2, 3 y 5. \nPregunta 2. Opciones 2 y 4. \nPregunta 3. Opciones 3, 4, 5, y 6. \nPregunta 4. Opciones 2. \nPregunta 5. Opciones 2. \nPregunta 6. Opciones 3. \nPregunta 7. Opciones 1.</string>
    <string name="es_un_caf_intenso_con_notas_a_nuez_avellana_frutos_secos_y_residual_cremoso_a_chocolate_n_npregunta_1_opciones_3_y_5_npregunta_2_opciones_5_y_6_npregunta_3_opciones_4_y_6_npregunta_4_opciones_3_y_4_npregunta_5_opciones_3_y_4_npregunta_6_opciones_2_npregunta_7_opciones_1">Es un Café intenso con notas a nuez, avellana, frutos secos y residual cremoso a chocolate.\n \nPregunta 1. Opciones 3 y 5. \nPregunta 2. Opciones 5 y 6. \nPregunta 3. Opciones 4 y 6. \nPregunta 4. Opciones 3 y 4. \nPregunta 5. Opciones 3 y 4. \nPregunta 6. Opciones 2. \nPregunta 7. Opciones 1.</string>
    <string name="es_un_caf_suave_con_notas_c_tricas_y_exquisita_acidez_n_npregunta_1_opciones_4_y_6_npregunta_2_opciones_2_npregunta_3_opciones_3_4_y_5_npregunta_4_opciones_1_npregunta_5_opciones_1_npregunta_6_opciones_2_npregunta_7_opciones_1">Es un Café suave con notas cítricas y exquisita acidez.\n \nPregunta 1. Opciones 4 y 6. \nPregunta 2. Opciones 2. \nPregunta 3. Opciones 3, 4 y 5. \nPregunta 4. Opciones 1. \nPregunta 5. Opciones 1. \nPregunta 6. Opciones 2. \nPregunta 7. Opciones 1.</string>
    <string name="total_de_respuestas">Total de respuestas:</string>
    <string name="femenino">Femenino:</string>
    <string name="masculino">Masculino:</string>
    <string name="tus_respuestas_son">Tú respuesta es la opción:</string>
    <string name="respuesta_1">Es un Café de carácter con notas de dulce caramelo o jarabe y matices de plantas silvestre y/o comestibles.</string>
    <string name="respuesta_2">Es un Café intenso con notas de dulce caramelo, acidez sutil y residual de chocolate amargo.</string>
    <string name="respuesta_3">Es un Café balanceado con notas dulces y textura sedosa.</string>
    <string name="respuesta_4">Es un Café intenso con notas a nuez, avellana, frutos secos y residual cremoso a chocolate.</string>
    <string name="respuesta_5">Es un Café suave con notas cítricas y exquisita acidez.</string>
    <string name="respuesta_6">Es un Café ligero con notas de dulce caramelo, acidez sutil y residual de chocolate amargo.</string>
    <string name="respuesta_7">Es un Café balanceado con notas dulces y textura ligera.</string>
    <string name="respuesta_11">Es un Café intenso con notas de dulce caramelo, acidez sutil y residual de chocolate.</string>
    <string name="respuesta_12">Es un Café ligero con notas de dulce caramelo, acidez sutil y residual de chocolate.</string>
    <string name="respuesta_21">Es un Café intenso con notas de dulce caramelo, acidez sutil y residual de chocolate amargo.</string>
    <string name="respuesta_22">Es un Café ligero con notas de dulce caramelo, acidez sutil y residual de chocolate amargo.</string>
    <string name="respuesta_31">Es un Café balanceado con notas dulces y textura sedosa.</string>
    <string name="respuesta_32">Es un Café balanceado con notas dulces y textura ligera.</string>
    <string name="respuesta_41">Es un Café intenso con notas de dulce caramelo o jarabe y matices de plantas silvestre y/o comestibles.</string>
    <string name="respuesta_42">Es un Café ligero con notas de dulce caramelo o jarabe y matices de plantas silvestre y/o comestibles.</string>
    <string name="respuesta_51">Es un Café intenso con notas cítricas y exquisita acidez.</string>
    <string name="respuesta_52">Es un Café suave con notas cítricas y exquisita acidez.</string>
    <string name="respuesta_61">Es un Café intenso con notas a nuez, avellana, frutos secos y residual cremoso a chocolate.</string>
    <string name="respuesta_62">Es un Café  suave con notas a nuez, avellana, frutos secos y residual cremoso a chocolate.</string>
    <string name="respuesta_71">Es un Café  balanceado con notas de dulce caramelo, acidez sutil y residual de chocolate.</string>
    <string name="respuesta_81">Es un Café balanceado  con notas de dulce caramelo o jarabe y matices de plantas silvestre y/o comestibles.</string>
    <string name="respuesta_91">Es un Café balanceado  con notas de dulce caramelo, acidez sutil y residual de chocolate amargo.</string>
</resources>